; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/speakup/extr_spk_ttyio.c_spk_ttyio_synth_probe.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/speakup/extr_spk_ttyio.c_spk_ttyio_synth_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.spk_synth = type { i32 }

@spk_ttyio_synth = common dso_local global %struct.spk_synth* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @spk_ttyio_synth_probe(%struct.spk_synth* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.spk_synth*, align 8
  %4 = alloca i32, align 4
  store %struct.spk_synth* %0, %struct.spk_synth** %3, align 8
  %5 = load %struct.spk_synth*, %struct.spk_synth** %3, align 8
  %6 = call i32 @spk_ttyio_initialise_ldisc(%struct.spk_synth* %5)
  store i32 %6, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = load i32, i32* %4, align 4
  store i32 %10, i32* %2, align 4
  br label %15

11:                                               ; preds = %1
  %12 = load %struct.spk_synth*, %struct.spk_synth** %3, align 8
  %13 = getelementptr inbounds %struct.spk_synth, %struct.spk_synth* %12, i32 0, i32 0
  store i32 1, i32* %13, align 4
  %14 = load %struct.spk_synth*, %struct.spk_synth** %3, align 8
  store %struct.spk_synth* %14, %struct.spk_synth** @spk_ttyio_synth, align 8
  store i32 0, i32* %2, align 4
  br label %15

15:                                               ; preds = %11, %9
  %16 = load i32, i32* %2, align 4
  ret i32 %16
}

declare dso_local i32 @spk_ttyio_initialise_ldisc(%struct.spk_synth*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
